# kapla-cli

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml  test.yml  validation.yml
cli/: README.md  pyproject.toml
cli/kapla/cli/: app.py  new_repo.py
cli/kapla/docker/: buildx.py
cli/tests/: conftest.py  test_app.py
core/: README.md  pyproject.toml
core/kapla/cli/: projects.py
core/tests/: conftest.py  test_lib.py
examples/docker/: Dockerfile.build  README.md  builder.yml
scripts/: bootstrap.sh  env.sh
