[tool.poetry]
name = "kapla-cli-monorepo"
version = "3.1.0"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
snakeviz = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
