[tool.poetry]
name = "kapla-cli-monorepo"
version = "3.3.0-rc.1"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
