[tool.poetry]
name = "kapla-cli-monorepo"
version = "3.6.1"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
packages = []

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
